<resources>
    <string name="app_name">TipAndSaving</string>
    <string name="this_is_tip_calculator">This is Tip Calculator</string>
    <string name="hint_enter_amount">Enter amount USD</string>
    <string name="default_percent">25%</string>
    <string name="tip_value">Tip</string>
    <string name="total">total</string>
    <string name="this_is_saving_calculator">This is Saving Calculator</string>
    <string name="saving_value">Saving</string>
</resources>