<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:background="@android:color/holo_orange_dark"
        android:elevation="@dimen/elevation"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/this_is_tip_calculator"
        android:textSize="20sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <EditText
            android:id="@+id/edt_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:background="@android:color/holo_red_light"
            android:digits="0123456789"
            android:textColor="@android:color/holo_red_light"
            android:inputType="number"
            android:maxLength="6"
            android:cursorVisible="false"
            android:padding="5dp" />
        <TextView
            android:id="@+id/txt_tip_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowSpan="1"
            android:layout_column="0"
            android:padding="5dp"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/hint_enter_amount" />

        <TextView
            android:id="@+id/txt_percent_Tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="end|center_vertical"
            android:text="@string/default_percent" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar_Tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_rowSpan="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="center_vertical|fill_horizontal"
            android:max="50"
            android:progress="25"
            android:progressTint="@color/purple_500"
            android:thumbTint="@color/purple_500" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="end|center_vertical"
            android:text="@string/tip_value" />

        <TextView
            android:id="@+id/txt_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/teal_700"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/white"
            tools:text="haha" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="end|center_vertical"
            android:text="@string/total" />

        <TextView
            android:id="@+id/txt_total_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/teal_700"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/white"
            tools:text="haha" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:background="@android:color/holo_orange_dark"
            android:elevation="@dimen/elevation"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/this_is_tip_calculator"
            android:textSize="20sp" />
        <FrameLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal">



        <EditText
            android:id="@+id/edt_saving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:digits="0123456789"
            android:textColor="@android:color/transparent"
            android:elevation="@dimen/elevation"
            android:inputType="number"
            android:cursorVisible="false"
            android:maxLength="6"
            android:padding="5dp" />
            <TextView
                android:id="@+id/txt_Saving_edt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textColor="@color/black"
                android:padding="5dp"
                android:text="@string/hint_enter_amount" />


        </FrameLayout>

        <TextView
            android:id="@+id/txt_percent_Saving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_rowSpan="1"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="end|center_vertical"
            android:text="@string/default_percent" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar_Saving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="6"
            android:layout_rowSpan="1"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="center_vertical|fill_horizontal"
            android:max="100"
            android:progress="25"
            android:progressTint="@color/purple_500"
            android:thumbTint="@color/purple_500" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_gravity="end|center_vertical"
            android:text="@string/saving_value" />

        <TextView
            android:id="@+id/txt_saving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_columnSpan="1"
            android:layout_gravity="fill_horizontal"
            android:background="@color/teal_700"
            android:elevation="@dimen/elevation"
            android:gravity="center"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/white"
            tools:text="haha" />


    </GridLayout>

    <Button
        android:id="@+id/btn_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button" />

</LinearLayout>